FIX Build Error

--- a/Components/Debt/SuggestedPaymentCard.razor
+++ b/Components/Debt/SuggestedPaymentCard.razor
@@ -62,4 +62,5 @@
 
 @code {
     [Parameter] public List<Debt> Debts { get; set; } = new();
+    [Parameter] public decimal TotalMinimumPayment { get; set; }
 } 
